eea/reports/browser/stylesheets/reports.css
.tree-level-arrow {
    width: 16px;
    height: 19px;
    float: left;
    cursor: pointer;
}

.tree-level-arrow ~ a {
    display: block !important;
}

.tree-level-close {
    background: transparent
    url("++resource++publication_images/navigation.png") no-repeat
    scroll 0 1px;
}

.tree-level-close:hover {
    background: transparent
    url("++resource++publication_images/navigation.png") no-repeat
    scroll 0 -16px;
}

.tree-level-open {
    background: transparent
    url("++resource++publication_images/navigation.png") no-repeat
    scroll 0 -32px;
}

.tree-level-open:hover {
    background: transparent
    url("++resource++publication_images/navigation.png") no-repeat
    scroll 0 -48px;
}
/* used by frontpage.css */
.figure-left {
    float: left;
    margin-right: 0.5em;
}
/* /used by frontpage.css */
.publicationText {
    background-color: transparent;
    border-bottom: 1px dotted gray;
    margin-bottom: 1em;
    padding-bottom: 1em;
    clear: right;
    margin-left: 0;
}

.publicationDescription {
    margin-bottom: 0;
}

.publicationClear {
    clear: left ! important;
    margin-top: 1em ! important;
}

.publicationText #auto-related {
    padding: 1em;
    margin: 1em 1em 0 0;
}

dl.publicationMessage {
    background-color: #f3f3f3;
    margin-top: 25px;
}

dl.publicationMessage dt.portletHeader {
    background-image: none;
}

dl.publicationMessage dd {
    clear: both;
}

/* Overrides for PDF Viewer */

body #region-content {
    background-color: #ffffff;
}

.report-pdf {
    display: block;
    float: left;
    width: 68%;
    margin-left: 0;
}

.publicationDescription {
    display: block;
    width: 30%;
    float: right;
}

.report-files {
    display: block;
}

.report-files .tree-level-1 {
   clear:both;
}

.inline-content-header {
    display: block;
    width: 30%;
    float: right;
}

.publicationText {
    border-bottom: none;
}

.content-header .panel-content #languageCodes {
    display: block;
}

.content-header .documentFirstHeading,
.content-header #languageCodes,
#content .content-header .documentByLine {
    display: none;
}

#plone-document-byline {
    margin-top: 25px;
}

.content-header #article-language {
    margin-top: 0px;
}

.inline-content-header #article-language {
    display: none;
}

.content-header #tip-article-language {
    margin-top: 6%;
}

#content .documentDescription {
    float: right;
    width: 30%;
}

.eea-tabs-panel .page {
    margin-left: 0;
}

#languageCodes li {
    font-size: inherit;
}

.pdfjs #toolbarViewerMiddle {
    left: 57%;
}

.publicationHidden {
    display: none;
}

#content .documentByLine {
    max-width: 100%;
}

.pdf-viewer-disabled .publicationDescription,
.pdf-viewer-disabled .documentDescription,
.pdf-viewer-disabled .inline-content-header {
    width: 100%;
    float: none;
}

.pdf-viewer-disabled .moreFiles {
    display: none;
}

.pdf-viewer-disabled > .content-header #tip-article-language {
    margin-top: 25%;
}

.pdf-viewer-disabled > .content-header #article-language {
    margin-top: 28%;
}

div > .portalMessage {
    width: 84%;
}

.inline-content-header .eea-available-version {
    display: none;
}

.pdf-right-alignment {
    float:right;
    width:29%;
    display:block;
}

.pdf-right-alignment ul{
    margin: 0;
}

.pdf-left-alignment {
    float: left;
    width:100%;
}

/* 100603 float report-files when class is precedeed by pdf-left-alignment
 * avoiding content from spilling into the publication image   
*/
.pdf-left-alignment ~ .report-files {
   float: left;
}

.pdfjs .sidebarOpen .findbar {
    padding: 0;
}

.sidebarOpen #mainContainer .findbar .toolbarButton {
    margin-left: 0;
}

.sidebarOpen .findbar #findInput {
    width: 20%;
}

.sidebarOpen .findbar .toolbarLabel {
    font-size: 10px;
    margin-left: 0;
    margin-right: 0;
}

@media (max-width: 840px) {
    .pdfjs .splitToolbarButton:first-child,
    .pdfjs .splitToolbarButton:last-child,
    .pdfjs .toolbarButton:first-child,
    .pdfjs .toolbarButton:last-child {
        margin-left: 0;
    }

    .sidebarOpen .findbar .toolbarLabel {
        padding-left: 0;
        padding-right: 0;
    }
}

@media screen and (max-width: 767px) {
    .publicationText .inline-content-header,
    .publicationText .documentFirstHeading,
    .publicationText .publicationDescription,
    .publicationText .moreFiles,
    #content .documentDescription {
        display: none;
    }

    .content-header .documentFirstHeading,
    .content-header #languageCodes,
    #content .content-header .documentByLine {
        display: block;
    }

    .pdf-viewer-disabled > .content-header #article-language {
        margin-top: 0;
    }

    .content-header {
        display: block;
    }

    .publicationText .report-pdf {
        float: none;
        width: 100%;
        display: none;
    }

    .publicationText .report-files {
        display: block;
    }

    #content .publicationHidden {
        display: block;
    }

    #content .publicationText .hiddenDesc {
        display: block;
        float: none;
        width: 100%;
    }

    .publicationText .pdf-right-alignment {
        float: none;
        width:100%;
        display:block;
        margin: 0;
    }

    .publicationText .pdf-left-alignment {
        float: none;
        width:100%;
        display:block;
        margin-top: 2em;
    }
}

@media (max-width: 425px) {
    #content-core > div > .portalMessage {
        width: 75%;
    }
}

@media print {
    .report-pdf {
        display: none;
    }
}

